syntax = "proto3";

package gidyon.apis;

option go_package="github.com/gidyon/services/pkg/api/messaging/sms";

import "google/protobuf/empty.proto";
import "google/api/field_behaviour.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message SMS {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "SMS"
            description: "SMS is a text message that is to be sent to client(s)"
            required: ["destination_phones", "message"]
		}
    };
    
    repeated string destination_phones = 2 [(google.api.field_behavior) = REQUIRED];
    string keyword = 1;
    string message = 3 [(google.api.field_behavior) = REQUIRED];
}

// Sends SMS to destination phone(s)
service SMSAPI {
    // Send an sms to its destination(s)
    rpc SendSMS (SMS) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            get: "/api/sms:send"
        };
    };
}

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
        title: "SMS API";
        description: "Send text messages to client(s)"
		version: "v1";
		contact: {
			name: "Github <Gideon Kamau>";
			url: "https://github.com/gidyon/services/blob/master/api/proto/messaging/sms.proto";
			email: "gideonhacer@gmail.com";
        };
        license: {
			name: "MIT License";
			url: "https://github.com/gidyon/services/blob/master/LICENSE";
		};
    };
	schemes: HTTP;
	schemes: HTTPS;
	consumes: "application/json";
	produces: "application/json";
	security_definitions: {
		security: {
		  key: "bearer"
		  value: {
			type: TYPE_API_KEY
			in: IN_HEADER
			name: "Authorization"
			description: "Authentication token, prefixed by Bearer: Bearer <token>"
		  }
		}
	}
	security: {
		security_requirement: {
		  key: "bearer"
		}
	}
};